# System-CAD

./: .gitignore  .gitmodules  AfirmationTransformationImGui.cpp  AfirmationTransformationImGui.h  AfirmatricTransformation.cpp  AfirmatricTransformation.h  BazierCurve.cpp  BazierCurve.h  BezierBase.cpp  BezierBase.h  BezierC0.cpp  BezierC0.h  BezierC2.cpp  BezierC2.h  BezierInterpolated.cpp  BezierInterpolated.h  BezierSurfaceC0.cpp  BezierSurfaceC0.h  BezierSurfaceC0Point.cpp  BezierSurfaceC0Point.h  BezierSurfaceC2.cpp  BezierSurfaceC2.h  CMakeLists.txt  Camera.cpp  Camera.h  CanterPoint.h  Cursor.h  EBO.h  Figure.cpp  Figure.h  Figure3D.cpp  Figure3D.h  FigureContainer.cpp  FigureContainer.h  FigureType.h  Figure_ControlSelected.h  FiguresVector.h  GregoryTest_Prosty.json  InfinityGrid.cpp  InfinityGrid.h  (+53 more)
Libraries/include/ImGui/: imgui.cpp
resource/Data/Constrains/: 1_.0_2_0_2  2_.0_5_0_5  5_.0_16_0_16  5_inner.0_16_0_16  7_.0_5_0_5  9_.0_16_0_16
resource/Data/Constrains/testOfBetterSolution/: 0_.0_2_0_2  3_.0_5_0_5  4_.0_5_0_5  5_.0_16_0_16  6_.0_5_0_5  7_.0_5_0_5  8_.0_5_0_5  9_.0_16_0_16  9_inner.0_16_0_16
resource/Models/: Fish_01_sciezki.k16  collapsed8.json  fish_01.json  fish_02.json  fish_03.json  fish_04.json  fish_05.json  fish_05_closer_double.json  fish_05_double.json  fish_05_double_intersection.json  fish_06_newTaile.json  fish_07_newTaile.json  fish_07_poprawki.json  fish_08_testy.json  fish_09.json  fish_10.json  fish_10_double.json  fish_11_double.json  fish_12_double.json  fish_13_double.json  fish_14_double.json  fish_16.json  fish_17.json  fish_17_double.json  fish_18_double.json  fish_19_double.json  fish_double_close_2.json  fish_finish_01.json  fish_finish_finish_only_rotation.json  tmp.json
resource/Shaders/: GregoryPatch_tc.glsl  GregoryPatch_te.glsl  bezier2d_te.glsl  bezier3d_frag.glsl  bezier3d_te.glsl  bezierSurfaceC0_frag.glsl  bezierSurfaceC0_tc.glsl  bezierSurfaceC0_te.glsl  bezierSurfaceC0_vert.glsl  bezierSurfaceC2_frag.glsl  bezierSurfaceC2_tc_quads.glsl  bezierSurfaceC2_te.glsl  bezierSurfaceC2_te_quads.glsl  cursor_frag.glsl  cursor_vert.glsl  torus_frag.glsl  torus_vert.glsl
source/: CMakeLists.txt  Camera.cpp  Camera.h  Constants.h  Main.cpp  Main.h
source/Container/: FigureContainer.cpp  FigureContainer.h
source/Figures/: CanterPoint.h  Cursor.h  Figure.cpp  Figure.h  Figure3D.cpp  Figure3D.h  FigureType.h  Figure_ControlSelected.h  GregoryPatch.cpp  GregoryPatch.h  InfinityGrid.cpp  InfinityGrid.h  Point.h  Torus.cpp  Torus.h  VirtualPoint.cpp  VirtualPoint.h
source/Figures/Bezier/: BezierBase.cpp  BezierBase.h  BezierC0.cpp  BezierC0.h  BezierC2.cpp  BezierC2.h  BezierCurve.cpp  BezierCurve.h  BezierInterpolated.cpp  BezierInterpolated.h  BezierSurfaceC0.cpp  BezierSurfaceC0.h  BezierSurfaceC2.cpp  BezierSurfaceC2.h  IntersectionCurve.cpp  IntersectionCurve.h
source/Figures/Bezier/Surface/: BezierSurface.cpp  BezierSurface.h  BezierSurfaceC0.cpp  BezierSurfaceC0.h  BezierSurfaceC2.cpp  BezierSurfaceC2.h  IPatch.h  Patch.h  PatchesGenerertor.h
source/Figures/FigureFunctions/: MergePoints.cpp  MergePoints.h  MoveMeWithMouse.h  StereoscoicView.cpp  StereoscoicView.h  TransformSurfercUsingCurve.h
source/Figures/Intersection/: Intersection.cpp  Intersection.h  IntersectionAble.h  IntersectionAblePuffed.cpp  IntersectionAblePuffed.h  IntersectionConstFun.h  IntersectionResultInfo.h
source/Helper/: FileManager.h  MathOperations.h  OpenGLHelper.h  Wraper.h
source/IdGiver/: I_IdGiver.h  IdGiver.cpp  IdGiver.h  IdGiverTyped.h
source/PathGenerator/: GeneratorOfPathInsideConstrain.h  HeightMapGenerator.h  IntersectionMover.h
source/SceneManadement/: Manager.cpp  Manager.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  TransformSurfaceWindow.h
source/SceneManadement/Windows/: IntersectionWindow.h  TransformSurfaceWindow.h  WindowParent.h
source/ShaderManadement/: Shader.h  Texture.cpp  Texture.h  shaderClass.cpp
source/ShaderRefrence/: ShaderCreator.h  StaticShaders.cpp  StaticShaders.h
source/Transformations/: Quaternion.cpp  Quaternion.h  QuaternionRotationImGui.h  Rotation.h  RotationImGui.h  Scale.cpp  Scale.h  ScaleImGui.h  TransposeImGui.h
x64/Debug/: YoutubeOpenGL.exe.recipe  YoutubeOpenGL.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/YoutubeOpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  YoutubeOpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
